--- a/styles.css
+++ b/styles.css
@@ -10,9 +10,18 @@ h1 {
     margin-top: 40px;
 }
 
+h2 {
+    color: #333;
+    margin-bottom: 20px;
+}
+
 p {
     color: #666;
     text-align: justify;
+}
+
+section {
+    padding: 40px 0;
 }
 
 /* Responsive styles */
@@ -20,4 +29,34 @@ p {
     h1 {
         font-size: 24px;
     }
+}
+
+/* Contact form styles */
+form {
+    max-width: 400px;
+    margin: 0 auto;
+}
+
+/* Service list styles */
+ul {
+    list-style: none;
+    padding-left: 0;
+}
+
+ul li:before {
+    content: "\2022";
+    margin-right: 5px;
+}
+
+/* Hero section styles */
+#hero {
+    background-image: url("path-to-your-image.jpg");
+    background-size: cover;
+    background-position: center;
+    color: #fff;
+}
+
+#hero h1,
+#hero p {
+    color: #fff;
 }
